fix dark mode trigger for all buttons

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ html, body {
     padding-bottom: 0.3em;
 }
 
-#d-mode-toggle{
+.d-mode-toggle{
     padding: 0.5em;
     padding-left: 1em;
     padding-right: 1em;
